rtp: stop the transmitter src before unlinking its funnel

This patch tweaks the order the elements are stopped and unlinked to
prevent the transmitter source to fail on a not-linked to any sinkpads
error. The pipeline is transmitter-src -> funnel -> rtpbin -> substream.

The funnel is stopped, then the transmitter-src, and thereafter the
funnel is unlinked.

https://bugs.freedesktop.org/show_bug.cgi?id=100586